Basic layout of product archive item

--- a/sass/woocommerce.scss
+++ b/sass/woocommerce.scss
@@ -8,14 +8,9 @@
 @import "woocommerce/layout";
 
 /*--------------------------------------------------------------
-# WooCommerce Checkout
+# WooCommerce Archive
 --------------------------------------------------------------*/
-@import "woocommerce/checkout";
-
-/*--------------------------------------------------------------
-# WooCommerce Cart
---------------------------------------------------------------*/
-@import "woocommerce/cart";
+@import "woocommerce/archive";
 
 /*--------------------------------------------------------------
 # WooCommerce Single Product
