--- a/woocommerce.css
+++ b/woocommerce.css
@@ -24,292 +24,28 @@
       margin: 0; } }
 
 /*--------------------------------------------------------------
-# WooCommerce Checkout
+# WooCommerce Archive
 --------------------------------------------------------------*/
-.woocommerce .woocommerce-info {
-  padding-left: 2em !important;
-  border-top: 0;
-  margin-bottom: 0.5em !important; }
-  .woocommerce .woocommerce-info:before {
-    content: ''; }
-  .woocommerce .woocommerce-info a {
-    text-decoration: none; }
-
-.woocommerce form.login,
-.woocommerce form.checkout_coupon {
-  margin: 0.5em 0;
-  border-radius: 0;
-  border-color: #f4f4f4;
-  padding: 10px 20px; }
-  .woocommerce form.login input.input-text,
-  .woocommerce form.checkout_coupon input.input-text {
-    padding: 0.5em;
-    border-radius: 0; }
-  .woocommerce form.login .form-row,
-  .woocommerce form.checkout_coupon .form-row {
-    padding: 1em 0; }
-  .woocommerce form.login input.button,
-  .woocommerce form.checkout_coupon input.button {
-    background-color: #24c48a;
-    color: #fff;
-    margin-right: 1.2em;
-    border-radius: 0; }
-    .woocommerce form.login input.button:hover,
-    .woocommerce form.checkout_coupon input.button:hover {
-      background-color: #24c48a; }
-  .woocommerce form.login a,
-  .woocommerce form.checkout_coupon a {
-    text-decoration: none; }
-
-.woocommerce .woocommerce-checkout .checkout-details {
-  width: 48%;
-  float: left;
-  margin-top: 2em; }
-  @media screen and (max-width: 768px) {
-    .woocommerce .woocommerce-checkout .checkout-details {
-      width: 100%;
-      float: none; } }
-  .woocommerce .woocommerce-checkout .checkout-details h3 {
-    font-size: 1.5em; }
-    .woocommerce .woocommerce-checkout .checkout-details h3 label {
-      font-size: 0.8em; }
-  .woocommerce .woocommerce-checkout .checkout-details .form-row {
-    margin-bottom: 1em; }
-    .woocommerce .woocommerce-checkout .checkout-details .form-row label {
-      line-height: 1.75;
-      font-size: 0.9em; }
-      .woocommerce .woocommerce-checkout .checkout-details .form-row label abbr {
-        color: inherit; }
-    .woocommerce .woocommerce-checkout .checkout-details .form-row input.input-text,
-    .woocommerce .woocommerce-checkout .checkout-details .form-row textarea.input-text {
-      padding: 0.5em;
-      border-radius: 0; }
-
-.woocommerce .woocommerce-checkout .order-details {
-  width: 48%;
-  float: right;
-  border: 1px solid #f4f4f4;
-  padding: 0 1em;
-  margin-top: 2em; }
-  @media screen and (max-width: 768px) {
-    .woocommerce .woocommerce-checkout .order-details {
-      width: 100%;
-      float: none; } }
-  .woocommerce .woocommerce-checkout .order-details h3 {
-    font-size: 1.5em; }
-  .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order .woocommerce-checkout-review-order-table {
-    border: none;
-    border-bottom: 1px solid #f4f4f4;
+.woocommerce ul.products li.product {
+  margin: 0 1% 35px 1%;
+  width: 31.333%; }
+  .woocommerce ul.products li.product.first {
+    margin: 0 2% 35px 0; }
+  .woocommerce ul.products li.product.last {
+    margin: 0 0 35px 2%; }
+  .woocommerce ul.products li.product img {
     margin-bottom: 0; }
-    .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order .woocommerce-checkout-review-order-table td {
-      border-top: 1px solid #f4f4f4; }
-    .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order .woocommerce-checkout-review-order-table .product-name {
-      width: 70%;
-      padding: 10px 12px 10px 0; }
-    .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order .woocommerce-checkout-review-order-table .product-total {
-      width: 30%;
-      text-align: right;
-      padding: 10px 0 10px 12px; }
-    .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order .woocommerce-checkout-review-order-table tfoot th {
-      border-top: 1px solid #f4f4f4;
-      padding: 10px 12px 10px 0; }
-    .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order .woocommerce-checkout-review-order-table tfoot td {
-      padding: 10px 0 10px 12px; }
-    .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order .woocommerce-checkout-review-order-table tfoot .cart-subtotal td,
-    .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order .woocommerce-checkout-review-order-table tfoot .order-total td {
-      text-align: right; }
-  .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order #payment {
-    background: none; }
-    .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order #payment .payment_methods {
-      border-bottom: none;
-      padding: 1em 0; }
-      .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order #payment .payment_methods li {
-        border-bottom: 1px solid #f4f4f4;
-        padding: 0.5em 0; }
-    .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order #payment .payment_box {
-      margin: 0;
-      background-color: transparent; }
-      .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order #payment .payment_box:before {
-        border: none; }
-      .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order #payment .payment_box p:first-child {
-        margin-top: 0; }
-    .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order #payment .place-order {
-      float: left;
-      padding: 1em 0; }
-      .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order #payment .place-order .button {
-        background-color: #24c48a;
-        color: #fff;
-        margin-right: 1.2em;
-        border-radius: 0; }
-        .woocommerce .woocommerce-checkout .order-details .woocommerce-checkout-review-order #payment .place-order .button:hover {
-          background-color: #24c48a; }
-
-/*--------------------------------------------------------------
-# WooCommerce Cart
---------------------------------------------------------------*/
-.woocommerce-cart .woocommerce-message,
-.woocommerce-cart .woocommerce-info {
-  border-top: none; }
-  .woocommerce-cart .woocommerce-message:before,
-  .woocommerce-cart .woocommerce-info:before {
-    color: #24c48a; }
-
-.woocommerce-cart form table.shop_table {
-  padding: 2em;
-  border-radius: 0; }
-  @media screen and (max-width: 768px) {
-    .woocommerce-cart form table.shop_table {
-      padding: 1em; } }
-  .woocommerce-cart form table.shop_table .quantity.button-controls::after {
-    clear: both;
-    content: "";
-    display: table; }
-  .woocommerce-cart form table.shop_table .quantity.button-controls .qty {
-    border-radius: 0;
-    width: 2em;
-    float: left;
-    height: 26px;
-    padding: 0;
-    -moz-appearance: textfield;
-    border-color: #adadad;
-    border-width: 1px;
-    color: #626262; }
-    .woocommerce-cart form table.shop_table .quantity.button-controls .qty::-webkit-inner-spin-button, .woocommerce-cart form table.shop_table .quantity.button-controls .qty::-webkit-outer-spin-button {
-      -webkit-appearance: none;
-      margin: 0; }
-  .woocommerce-cart form table.shop_table .quantity.button-controls .add,
-  .woocommerce-cart form table.shop_table .quantity.button-controls .subtract {
-    border-radius: 0;
-    border-color: #adadad;
-    border-width: 1px;
-    background: #f9f9f9;
-    float: left;
-    padding: 6px 10px; }
-    .woocommerce-cart form table.shop_table .quantity.button-controls .add:hover,
-    .woocommerce-cart form table.shop_table .quantity.button-controls .subtract:hover {
-      background: #c6c6c6; }
-  .woocommerce-cart form table.shop_table .quantity.button-controls .subtract {
-    border-right: none; }
-  .woocommerce-cart form table.shop_table .quantity.button-controls .add {
-    border-left: none; }
-  .woocommerce-cart form table.shop_table thead th {
-    font-weight: normal;
-    text-transform: uppercase;
-    font-size: 0.85em; }
-  .woocommerce-cart form table.shop_table .product-remove {
-    width: 30px; }
-    .woocommerce-cart form table.shop_table .product-remove a {
-      color: #adadad !important;
-      font-weight: 100; }
-      .woocommerce-cart form table.shop_table .product-remove a:hover, .woocommerce-cart form table.shop_table .product-remove a:focus {
-        background: transparent;
-        color: #6d6d6d !important; }
-  .woocommerce-cart form table.shop_table .product-thumbnail {
-    width: 85px;
-    padding: 6px 0; }
-    .woocommerce-cart form table.shop_table .product-thumbnail a {
-      vertical-align: middle; }
-      .woocommerce-cart form table.shop_table .product-thumbnail a img {
-        width: auto; }
-    @media screen and (max-width: 768px) {
-      .woocommerce-cart form table.shop_table .product-thumbnail {
-        display: none; } }
-  .woocommerce-cart form table.shop_table .product-name a {
-    text-decoration: none;
-    color: #2d2d2d;
-    font-weight: bold; }
-    .woocommerce-cart form table.shop_table .product-name a:hover {
-      color: #24c48a; }
-  .woocommerce-cart form table.shop_table .product-price {
-    width: 150px; }
-    .woocommerce-cart form table.shop_table .product-price .amount {
-      font-weight: bold; }
-    @media screen and (max-width: 768px) {
-      .woocommerce-cart form table.shop_table .product-price {
-        display: none; } }
-  .woocommerce-cart form table.shop_table .product-quantity {
-    width: 150px; }
-    @media screen and (max-width: 768px) {
-      .woocommerce-cart form table.shop_table .product-quantity {
-        width: 60px; } }
-  @media screen and (max-width: 768px) {
-    .woocommerce-cart form table.shop_table .add,
-    .woocommerce-cart form table.shop_table .subtract {
-      display: none; } }
-  .woocommerce-cart form table.shop_table .product-subtotal {
-    width: 150px; }
-    .woocommerce-cart form table.shop_table .product-subtotal .amount {
-      font-weight: bold; }
-    @media screen and (max-width: 768px) {
-      .woocommerce-cart form table.shop_table .product-subtotal {
-        width: 60px; } }
-  .woocommerce-cart form table.shop_table td.actions {
-    padding: 2em 0 0 0; }
-    .woocommerce-cart form table.shop_table td.actions input.button {
-      background-color: #24c48a;
-      color: #fff;
-      border-radius: 0; }
-      .woocommerce-cart form table.shop_table td.actions input.button:hover {
-        background-color: #24c48a; }
-      @media screen and (max-width: 768px) {
-        .woocommerce-cart form table.shop_table td.actions input.button {
-          width: 100% !important; } }
-    .woocommerce-cart form table.shop_table td.actions .coupon input.input-text {
-      height: 36px;
-      border-radius: 0;
-      width: 200px !important; }
-      @media screen and (max-width: 768px) {
-        .woocommerce-cart form table.shop_table td.actions .coupon input.input-text {
-          width: 100% !important;
-          margin-bottom: 10px; } }
-
-.woocommerce-cart .cart-collaterals .cart_totals {
-  float: none;
-  width: 100%; }
-  .woocommerce-cart .cart-collaterals .cart_totals table {
-    border: none; }
-    .woocommerce-cart .cart-collaterals .cart_totals table tr th {
-      padding-left: 0;
-      width: 150px;
-      border-top: none;
-      border-bottom: 1px solid #f4f4f4; }
-    .woocommerce-cart .cart-collaterals .cart_totals table tr td {
-      padding-right: 0;
-      text-align: right;
-      border-top: none;
-      border-bottom: 1px solid #f4f4f4; }
-    .woocommerce-cart .cart-collaterals .cart_totals table tr.shipping p {
-      margin-top: 0.25em;
-      margin-bottom: 0; }
-      .woocommerce-cart .cart-collaterals .cart_totals table tr.shipping p a {
-        text-decoration: none; }
-    .woocommerce-cart .cart-collaterals .cart_totals table tr.shipping .shipping-calculator-form .shipping-calculator-button {
-      color: #24c48a; }
-      .woocommerce-cart .cart-collaterals .cart_totals table tr.shipping .shipping-calculator-form .shipping-calculator-button:hover {
-        color: #24c48a; }
-    .woocommerce-cart .cart-collaterals .cart_totals table tr.shipping .shipping-calculator-form .button {
-      background-color: #24c48a;
-      color: #fff;
-      border-radius: 0; }
-      .woocommerce-cart .cart-collaterals .cart_totals table tr.shipping .shipping-calculator-form .button:hover {
-        background-color: #24c48a; }
-      @media screen and (max-width: 768px) {
-        .woocommerce-cart .cart-collaterals .cart_totals table tr.shipping .shipping-calculator-form .button {
-          width: 100% !important; } }
-
-.woocommerce-cart .wc-proceed-to-checkout a.checkout-button {
-  display: inline-block;
-  background-color: #24c48a;
-  color: #fff;
-  border-radius: 0;
-  font-size: 1em;
-  float: right; }
-  .woocommerce-cart .wc-proceed-to-checkout a.checkout-button:hover {
-    background-color: #24c48a; }
-  @media screen and (max-width: 768px) {
-    .woocommerce-cart .wc-proceed-to-checkout a.checkout-button {
-      width: 100%;
-      margin-bottom: 10px; } }
+  .woocommerce ul.products li.product h3 {
+    text-align: center; }
+  .woocommerce ul.products li.product .price {
+    color: #24c48a;
+    text-align: center; }
+    .woocommerce ul.products li.product .price del {
+      color: #adadad;
+      display: inline; }
+    .woocommerce ul.products li.product .price ins {
+      color: #24c48a;
+      display: inline; }
 
 /*--------------------------------------------------------------
 # WooCommerce Single Product
