--- a/woocommerce.css
+++ b/woocommerce.css
@@ -29,6 +29,18 @@
 .woocommerce ul.products li.product {
   margin: 0 1% 35px 1%;
   width: 31.333%; }
+  .woocommerce ul.products li.product span.onsale {
+    background-color: #24c48a;
+    border-radius: 0;
+    font-size: 11px;
+    left: 0;
+    right: auto;
+    line-height: normal;
+    min-height: 0;
+    padding: 5px 13px;
+    text-transform: uppercase;
+    top: 5px;
+    z-index: 10; }
   .woocommerce ul.products li.product.first {
     margin: 0 2% 35px 0; }
   .woocommerce ul.products li.product.last {
