Standardise partial name with North

--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -1,7 +1,7 @@
 /*--------------------------------------------------------------
 ## General Layout
 --------------------------------------------------------------*/
-@import "../layout/general";
+@import "../layout/layout";
 
 /*--------------------------------------------------------------
 ## Page Settings
