Pagination font size correction

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -382,6 +382,7 @@ $sel: '';
 		background: #fff; 
 		border: 1px solid $color__border-button;
 		color: $color__text-medium;
+		font-size: 13px; 
 		margin-right: 1px;
 		padding: 7px 13px;
 		
