--- a/woocommerce.css
+++ b/woocommerce.css
@@ -26,9 +26,112 @@
 /*--------------------------------------------------------------
 # WooCommerce Archive
 --------------------------------------------------------------*/
+.woocommerce .woocommerce-ordering {
+  margin-bottom: 40px;
+  cursor: pointer; }
+  .woocommerce .woocommerce-ordering .ordering-selector-wrapper {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    font-size: 0.85em;
+    display: block;
+    border: 1px solid #ebebeb;
+    padding: 10px;
+    line-height: 1em;
+    position: relative;
+    color: #626262; }
+    .woocommerce .woocommerce-ordering .ordering-selector-wrapper .current {
+      display: inline-block; }
+    .woocommerce .woocommerce-ordering .ordering-selector-wrapper svg {
+      float: right;
+      margin: 0 -3px 0 10px;
+      -webkit-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+      -webkit-transition: all 0.15s ease-in;
+      -moz-transition: all 0.15s ease-in;
+      transition: all 0.15s ease-in; }
+      .woocommerce .woocommerce-ordering .ordering-selector-wrapper svg path {
+        fill: #626262; }
+    .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover {
+      color: #2d2d2d; }
+      .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover .north-icon-next {
+        -webkit-transform: rotate(90deg);
+        -moz-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+        -o-transform: rotate(90deg);
+        transform: rotate(90deg);
+        color: #2d2d2d; }
+      .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover path {
+        fill: #2d2d2d; }
+    .woocommerce .woocommerce-ordering .ordering-selector-wrapper .ordering-dropdown-container {
+      left: -1px;
+      right: -1px;
+      position: absolute;
+      z-index: 999;
+      top: 100%;
+      min-height: 1px; }
+    .woocommerce .woocommerce-ordering .ordering-selector-wrapper .ordering-dropdown {
+      list-style: none;
+      margin: 0;
+      border: 1px solid #ebebeb;
+      background: white;
+      padding: 5px 0;
+      box-shadow: 0 1px 1px rgba(0, 0, 0, 0.07);
+      display: block;
+      position: absolute;
+      width: 100%;
+      top: 0;
+      opacity: 0;
+      visibility: hidden;
+      opacity: 0;
+      -webkit-transition: all 0.15s ease-in;
+      -moz-transition: all 0.15s ease-in;
+      transition: all 0.15s ease-in;
+      -webkit-transform-origin: center top;
+      -moz-transform-origin: center top;
+      -ms-transform-origin: center top;
+      -o-transform-origin: center top;
+      transform-origin: center top;
+      -webkit-transform: scale(0.95);
+      -moz-transform: scale(0.95);
+      -ms-transform: scale(0.95);
+      -o-transform: scale(0.95);
+      transform: scale(0.95); }
+      .woocommerce .woocommerce-ordering .ordering-selector-wrapper .ordering-dropdown li {
+        cursor: pointer;
+        white-space: nowrap;
+        padding: 15px 25px;
+        color: #adadad;
+        position: relative; }
+        .woocommerce .woocommerce-ordering .ordering-selector-wrapper .ordering-dropdown li:hover {
+          color: #2d2d2d; }
+    .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover .ordering-dropdown {
+      visibility: visible;
+      opacity: 1;
+      -webkit-transform: scale(1);
+      -moz-transform: scale(1);
+      -ms-transform: scale(1);
+      -o-transform: scale(1);
+      transform: scale(1); }
+
 .woocommerce ul.products li.product {
-  margin: 0 1% 35px 1%;
-  width: 31.333%; }
+  margin: 0 0 25px 0;
+  width: 100%; }
+  .woocommerce ul.products li.product.first {
+    margin: 0 0 25px 0; }
+  .woocommerce ul.products li.product.last {
+    margin: 0 0 25px 1%; }
+  @media (min-width: 321px) {
+    .woocommerce ul.products li.product {
+      margin: 0 1% 35px 1%;
+      width: 31.333%; }
+      .woocommerce ul.products li.product.first {
+        margin: 0 2% 35px 0; }
+      .woocommerce ul.products li.product.last {
+        margin: 0 0 35px 2%; } }
   .woocommerce ul.products li.product span.onsale {
     background-color: #24c48a;
     border-radius: 0;
@@ -41,10 +144,6 @@
     text-transform: uppercase;
     top: 5px;
     z-index: 10; }
-  .woocommerce ul.products li.product.first {
-    margin: 0 2% 35px 0; }
-  .woocommerce ul.products li.product.last {
-    margin: 0 0 35px 2%; }
   .woocommerce ul.products li.product a img {
     margin-bottom: 0; }
   .woocommerce ul.products li.product h3 {
