--- a/woocommerce.css
+++ b/woocommerce.css
@@ -27,19 +27,19 @@
 # WooCommerce Archive
 --------------------------------------------------------------*/
 .woocommerce .woocommerce-ordering {
-  margin-bottom: 40px;
-  cursor: pointer; }
+  cursor: pointer;
+  margin-bottom: 40px; }
   .woocommerce .woocommerce-ordering .ordering-selector-wrapper {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    font-size: 0.85em;
-    display: block;
     border: 1px solid #ebebeb;
-    padding: 10px;
+    box-sizing: border-box;
+    color: #626262;
+    display: block;
+    font-size: 0.85em;
     line-height: 1em;
+    padding: 10px;
     position: relative;
-    color: #626262; }
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box; }
     .woocommerce .woocommerce-ordering .ordering-selector-wrapper .current {
       display: inline-block; }
     .woocommerce .woocommerce-ordering .ordering-selector-wrapper svg {
@@ -58,34 +58,34 @@
     .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover {
       color: #2d2d2d; }
       .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover .north-icon-next {
+        color: #2d2d2d;
         -webkit-transform: rotate(90deg);
         -moz-transform: rotate(90deg);
         -ms-transform: rotate(90deg);
         -o-transform: rotate(90deg);
-        transform: rotate(90deg);
-        color: #2d2d2d; }
+        transform: rotate(90deg); }
       .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover path {
         fill: #2d2d2d; }
     .woocommerce .woocommerce-ordering .ordering-selector-wrapper .ordering-dropdown-container {
       left: -1px;
-      right: -1px;
+      min-height: 1px;
       position: absolute;
-      z-index: 999;
+      right: -1px;
       top: 100%;
-      min-height: 1px; }
+      z-index: 999; }
     .woocommerce .woocommerce-ordering .ordering-selector-wrapper .ordering-dropdown {
-      list-style: none;
-      margin: 0;
-      border: 1px solid #ebebeb;
       background: white;
-      padding: 5px 0;
+      border: 1px solid #ebebeb;
       box-shadow: 0 1px 1px rgba(0, 0, 0, 0.07);
       display: block;
-      position: absolute;
-      width: 100%;
-      top: 0;
+      list-style: none;
+      margin: 0;
       opacity: 0;
+      padding: 5px 0;
+      position: absolute;
+      top: 0;
       visibility: hidden;
+      width: 100%;
       opacity: 0;
       -webkit-transition: all 0.15s ease-in;
       -moz-transition: all 0.15s ease-in;
@@ -101,21 +101,25 @@
       -o-transform: scale(0.95);
       transform: scale(0.95); }
       .woocommerce .woocommerce-ordering .ordering-selector-wrapper .ordering-dropdown li {
-        cursor: pointer;
-        white-space: nowrap;
-        padding: 15px 25px;
         color: #adadad;
-        position: relative; }
+        cursor: pointer;
+        padding: 15px 25px;
+        position: relative;
+        white-space: nowrap; }
         .woocommerce .woocommerce-ordering .ordering-selector-wrapper .ordering-dropdown li:hover {
           color: #2d2d2d; }
     .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover .ordering-dropdown {
-      visibility: visible;
       opacity: 1;
+      visibility: visible;
       -webkit-transform: scale(1);
       -moz-transform: scale(1);
       -ms-transform: scale(1);
       -o-transform: scale(1);
       transform: scale(1); }
+
+.woocommerce .woocommerce-result-count {
+  color: #626262;
+  font-size: 13px; }
 
 .woocommerce ul.products li.product {
   margin: 0 0 25px 0;
