--- a/woocommerce.css
+++ b/woocommerce.css
@@ -206,13 +206,19 @@
   .woocommerce .woocommerce-pagination .page-numbers li {
     border: none;
     margin-right: 5px; }
-    .woocommerce .woocommerce-pagination .page-numbers li a, .woocommerce .woocommerce-pagination .page-numbers li span {
+    .woocommerce .woocommerce-pagination .page-numbers li a,
+    .woocommerce .woocommerce-pagination .page-numbers li span {
+      background: #fff;
       border: 1px solid #ebebeb;
-      color: #2d2d2d;
-      padding: 8px 11px; }
-      .woocommerce .woocommerce-pagination .page-numbers li a:hover, .woocommerce .woocommerce-pagination .page-numbers li span:hover {
-        color: #2d2d2d;
-        background: transparent; }
+      color: #626262;
+      font-size: 13px;
+      margin-right: 1px;
+      padding: 9px 11px 8px; }
+      .woocommerce .woocommerce-pagination .page-numbers li a:hover,
+      .woocommerce .woocommerce-pagination .page-numbers li span:hover {
+        background: #24c48a;
+        border-color: #24c48a;
+        color: #fff; }
     .woocommerce .woocommerce-pagination .page-numbers li .current {
       background: #24c48a;
       border: 1px solid #24c48a;
@@ -220,6 +226,14 @@
       .woocommerce .woocommerce-pagination .page-numbers li .current:hover {
         background: #24c48a;
         color: #fff; }
+    .woocommerce .woocommerce-pagination .page-numbers li .current {
+      background: #24c48a;
+      border-color: #24c48a;
+      color: #fff; }
+    .woocommerce .woocommerce-pagination .page-numbers li .next,
+    .woocommerce .woocommerce-pagination .page-numbers li .prev {
+      font-family: "Lato", sans-serif;
+      padding: 9px 9px 8px; }
 
 /*--------------------------------------------------------------
 # WooCommerce Single Product
