--- a/style.css
+++ b/style.css
@@ -1277,7 +1277,7 @@ a {
 .site-content .widget-area {
   float: right;
   overflow: hidden;
-  padding-left: 3.3333em;
+  padding-left: 40px;
   width: 25.61404%; }
   @media (max-width: 768px) {
     .site-content .widget-area {
