--- a/sass/woocommerce.scss
+++ b/sass/woocommerce.scss
@@ -26,3 +26,8 @@
 # WooCommerce Cart
 --------------------------------------------------------------*/
 @import "woocommerce/cart";
+
+/*--------------------------------------------------------------
+# WooCommerce Widgets
+--------------------------------------------------------------*/
+@import "woocommerce/widgets";
